--- a/Zleep/Zleep/InZleep.storyboard
+++ b/Zleep/Zleep/InZleep.storyboard
@@ -17,15 +17,15 @@
                         <rect key="frame" x="0.0" y="0.0" width="600" height="600"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <subviews>
+                            <imageView userInteractionEnabled="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="bench.JPG" translatesAutoresizingMaskIntoConstraints="NO" id="jA3-h5-BBy">
+                                <rect key="frame" x="0.0" y="0.0" width="600" height="600"/>
+                            </imageView>
                             <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Alarm Set For:" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="KWz-Cm-p8l">
                                 <rect key="frame" x="180" y="549" width="110" height="20.5"/>
                                 <fontDescription key="fontDescription" type="system" pointSize="17"/>
                                 <color key="textColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
                                 <nil key="highlightedColor"/>
                             </label>
-                            <imageView userInteractionEnabled="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" misplaced="YES" image="turtle_96x104.png" translatesAutoresizingMaskIntoConstraints="NO" id="r7Y-Ha-IlR">
-                                <rect key="frame" x="191" y="379" width="193" height="146"/>
-                            </imageView>
                             <button opaque="NO" contentMode="scaleToFill" misplaced="YES" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="2jF-bh-F4L">
                                 <rect key="frame" x="528" y="20" width="72" height="30"/>
                                 <state key="normal" title="Add Audio">
@@ -44,20 +44,27 @@
                                 <color key="textColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
                                 <nil key="highlightedColor"/>
                             </label>
+                            <imageView userInteractionEnabled="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" misplaced="YES" image="turtle_96x104.png" translatesAutoresizingMaskIntoConstraints="NO" id="r7Y-Ha-IlR">
+                                <rect key="frame" x="204" y="151" width="193" height="146"/>
+                            </imageView>
                         </subviews>
                         <color key="backgroundColor" white="0.0" alpha="1" colorSpace="calibratedWhite"/>
                         <constraints>
                             <constraint firstAttribute="centerX" secondItem="KWz-Cm-p8l" secondAttribute="centerX" constant="65" id="1oA-Uf-aX8"/>
                             <constraint firstItem="IEp-zN-YQ9" firstAttribute="leading" secondItem="KWz-Cm-p8l" secondAttribute="trailing" constant="8" id="AHd-Nu-LPH"/>
-                            <constraint firstItem="KWz-Cm-p8l" firstAttribute="top" secondItem="r7Y-Ha-IlR" secondAttribute="bottom" constant="24" id="ExY-BV-oxD"/>
-                            <constraint firstAttribute="centerX" secondItem="r7Y-Ha-IlR" secondAttribute="centerX" constant="12.5" id="FlH-Jx-B9j"/>
+                            <constraint firstItem="Yu9-SP-5fv" firstAttribute="top" secondItem="jA3-h5-BBy" secondAttribute="bottom" id="EOX-XQ-8jG"/>
+                            <constraint firstItem="KWz-Cm-p8l" firstAttribute="top" secondItem="r7Y-Ha-IlR" secondAttribute="bottom" constant="252" id="ExY-BV-oxD"/>
+                            <constraint firstAttribute="centerX" secondItem="r7Y-Ha-IlR" secondAttribute="centerX" constant="-0.5" id="FlH-Jx-B9j"/>
+                            <constraint firstItem="jA3-h5-BBy" firstAttribute="leading" secondItem="VuG-DD-Ktm" secondAttribute="leadingMargin" constant="-16" id="VmM-TO-L5o"/>
                             <constraint firstAttribute="centerY" secondItem="r7Y-Ha-IlR" secondAttribute="centerY" id="WDg-yW-j7X"/>
                             <constraint firstItem="2jF-bh-F4L" firstAttribute="top" secondItem="MKX-81-bIt" secondAttribute="bottom" id="dXf-h3-drR"/>
+                            <constraint firstItem="jA3-h5-BBy" firstAttribute="top" secondItem="VuG-DD-Ktm" secondAttribute="topMargin" id="de5-JU-YQy"/>
                             <constraint firstAttribute="centerX" secondItem="5nr-5m-m51" secondAttribute="centerX" constant="13" id="eME-Tx-HwR"/>
                             <constraint firstItem="Yu9-SP-5fv" firstAttribute="top" secondItem="KWz-Cm-p8l" secondAttribute="bottom" constant="30" id="fU9-C9-xNW"/>
                             <constraint firstAttribute="trailingMargin" secondItem="2jF-bh-F4L" secondAttribute="trailing" id="gCa-2F-1OA"/>
+                            <constraint firstAttribute="trailingMargin" secondItem="jA3-h5-BBy" secondAttribute="trailing" constant="-16" id="h5O-c9-Cqk"/>
                             <constraint firstItem="Yu9-SP-5fv" firstAttribute="top" secondItem="IEp-zN-YQ9" secondAttribute="bottom" constant="30.5" id="rMk-tM-SZt"/>
-                            <constraint firstItem="r7Y-Ha-IlR" firstAttribute="top" secondItem="5nr-5m-m51" secondAttribute="bottom" constant="42" id="wHd-Zm-vbM"/>
+                            <constraint firstItem="r7Y-Ha-IlR" firstAttribute="top" secondItem="5nr-5m-m51" secondAttribute="bottom" constant="-186" id="wHd-Zm-vbM"/>
                             <constraint firstAttribute="centerX" secondItem="r7Y-Ha-IlR" secondAttribute="centerX" id="wTM-JT-H2g"/>
                         </constraints>
                         <variation key="default">
@@ -78,6 +85,7 @@
         </scene>
     </scenes>
     <resources>
+        <image name="bench.JPG" width="2448" height="3264"/>
         <image name="turtle_96x104.png" width="96" height="104"/>
     </resources>
 </document>
